@@ -511,6 +511,36 @@ name|f
 argument_list|)
 return|;
 block|}
+DECL|method|norms
+specifier|public
+name|void
+name|norms
+parameter_list|(
+name|String
+name|f
+parameter_list|,
+name|byte
+index|[]
+name|bytes
+parameter_list|,
+name|int
+name|offset
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|in
+operator|.
+name|norms
+argument_list|(
+name|f
+argument_list|,
+name|bytes
+argument_list|,
+name|offset
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|setNorm
 specifier|public
 name|void
