@@ -339,12 +339,12 @@ return|;
 block|}
 else|else
 block|{
-name|SegmentReader
+name|IndexReader
 index|[]
 name|readers
 init|=
 operator|new
-name|SegmentReader
+name|IndexReader
 index|[
 name|infos
 operator|.
@@ -398,10 +398,8 @@ argument_list|)
 expr_stmt|;
 return|return
 operator|new
-name|SegmentsReader
+name|MultiReader
 argument_list|(
-name|infos
-argument_list|,
 name|directory
 argument_list|,
 name|readers
@@ -717,6 +715,26 @@ name|norms
 parameter_list|(
 name|String
 name|field
+parameter_list|)
+throws|throws
+name|IOException
+function_decl|;
+comment|/** Reads the byte-encoded normalization factor for the named field of every    *  document.  This is used by the search code to score documents.    *    * @see Field#setBoost(float)    */
+DECL|method|norms
+specifier|public
+specifier|abstract
+name|void
+name|norms
+parameter_list|(
+name|String
+name|field
+parameter_list|,
+name|byte
+index|[]
+name|bytes
+parameter_list|,
+name|int
+name|offset
 parameter_list|)
 throws|throws
 name|IOException
