@@ -105,25 +105,25 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * FIXME: Describe class<code>SegmentsReader</code> here.  *  * @version $Id$  */
+comment|/** An IndexReader which reads multiple indexes, appending their content.  *  * @version $Id$  */
 end_comment
 
 begin_class
-DECL|class|SegmentsReader
-specifier|final
+DECL|class|MultiReader
+specifier|public
 class|class
-name|SegmentsReader
+name|MultiReader
 extends|extends
 name|IndexReader
 block|{
 DECL|field|readers
-specifier|protected
-name|SegmentReader
+specifier|private
+name|IndexReader
 index|[]
 name|readers
 decl_stmt|;
 DECL|field|starts
-specifier|protected
+specifier|private
 name|int
 index|[]
 name|starts
@@ -160,18 +160,51 @@ name|hasDeletions
 init|=
 literal|false
 decl_stmt|;
-DECL|method|SegmentsReader
-name|SegmentsReader
+comment|/** Construct reading the named set of readers. */
+DECL|method|MultiReader
+specifier|public
+name|MultiReader
 parameter_list|(
-name|SegmentInfos
-name|sis
-parameter_list|,
+name|IndexReader
+index|[]
+name|readers
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|readers
+operator|.
+name|length
+operator|==
+literal|0
+condition|?
+literal|null
+else|:
+name|readers
+index|[
+literal|0
+index|]
+operator|.
+name|directory
+argument_list|()
+argument_list|,
+name|readers
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Construct reading the named set of readers. */
+DECL|method|MultiReader
+specifier|public
+name|MultiReader
+parameter_list|(
 name|Directory
 name|directory
 parameter_list|,
-name|SegmentReader
+name|IndexReader
 index|[]
-name|r
+name|readers
 parameter_list|)
 throws|throws
 name|IOException
@@ -181,13 +214,11 @@ argument_list|(
 name|directory
 argument_list|)
 expr_stmt|;
-name|segmentInfos
-operator|=
-name|sis
-expr_stmt|;
+name|this
+operator|.
 name|readers
 operator|=
-name|r
+name|readers
 expr_stmt|;
 name|starts
 operator|=
@@ -264,7 +295,6 @@ expr_stmt|;
 block|}
 DECL|method|numDocs
 specifier|public
-specifier|final
 specifier|synchronized
 name|int
 name|numDocs
@@ -323,7 +353,6 @@ return|;
 block|}
 DECL|method|maxDoc
 specifier|public
-specifier|final
 name|int
 name|maxDoc
 parameter_list|()
@@ -334,7 +363,6 @@ return|;
 block|}
 DECL|method|document
 specifier|public
-specifier|final
 name|Document
 name|document
 parameter_list|(
@@ -373,7 +401,6 @@ comment|// dispatch to segment reader
 block|}
 DECL|method|isDeleted
 specifier|public
-specifier|final
 name|boolean
 name|isDeleted
 parameter_list|(
@@ -420,7 +447,6 @@ return|;
 block|}
 DECL|method|doDelete
 specifier|protected
-specifier|final
 specifier|synchronized
 name|void
 name|doDelete
@@ -506,7 +532,6 @@ expr_stmt|;
 block|}
 DECL|method|readerIndex
 specifier|private
-specifier|final
 name|int
 name|readerIndex
 parameter_list|(
@@ -621,7 +646,6 @@ return|;
 block|}
 DECL|method|norms
 specifier|public
-specifier|final
 specifier|synchronized
 name|byte
 index|[]
@@ -714,6 +738,100 @@ return|return
 name|bytes
 return|;
 block|}
+DECL|method|norms
+specifier|public
+specifier|synchronized
+name|void
+name|norms
+parameter_list|(
+name|String
+name|field
+parameter_list|,
+name|byte
+index|[]
+name|result
+parameter_list|,
+name|int
+name|offset
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|byte
+index|[]
+name|bytes
+init|=
+operator|(
+name|byte
+index|[]
+operator|)
+name|normsCache
+operator|.
+name|get
+argument_list|(
+name|field
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|bytes
+operator|!=
+literal|null
+condition|)
+comment|// cache hit
+name|System
+operator|.
+name|arraycopy
+argument_list|(
+name|bytes
+argument_list|,
+literal|0
+argument_list|,
+name|result
+argument_list|,
+name|offset
+argument_list|,
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|readers
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+comment|// read from segments
+name|readers
+index|[
+name|i
+index|]
+operator|.
+name|norms
+argument_list|(
+name|field
+argument_list|,
+name|result
+argument_list|,
+name|offset
+operator|+
+name|starts
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|setNorm
 specifier|public
 specifier|synchronized
@@ -772,7 +890,6 @@ comment|// dispatch
 block|}
 DECL|method|terms
 specifier|public
-specifier|final
 name|TermEnum
 name|terms
 parameter_list|()
@@ -781,7 +898,7 @@ name|IOException
 block|{
 return|return
 operator|new
-name|SegmentsTermEnum
+name|MultiTermEnum
 argument_list|(
 name|readers
 argument_list|,
@@ -793,7 +910,6 @@ return|;
 block|}
 DECL|method|terms
 specifier|public
-specifier|final
 name|TermEnum
 name|terms
 parameter_list|(
@@ -805,7 +921,7 @@ name|IOException
 block|{
 return|return
 operator|new
-name|SegmentsTermEnum
+name|MultiTermEnum
 argument_list|(
 name|readers
 argument_list|,
@@ -817,7 +933,6 @@ return|;
 block|}
 DECL|method|docFreq
 specifier|public
-specifier|final
 name|int
 name|docFreq
 parameter_list|(
@@ -867,7 +982,6 @@ return|;
 block|}
 DECL|method|termDocs
 specifier|public
-specifier|final
 name|TermDocs
 name|termDocs
 parameter_list|()
@@ -876,7 +990,7 @@ name|IOException
 block|{
 return|return
 operator|new
-name|SegmentsTermDocs
+name|MultiTermDocs
 argument_list|(
 name|readers
 argument_list|,
@@ -886,7 +1000,6 @@ return|;
 block|}
 DECL|method|termPositions
 specifier|public
-specifier|final
 name|TermPositions
 name|termPositions
 parameter_list|()
@@ -895,7 +1008,7 @@ name|IOException
 block|{
 return|return
 operator|new
-name|SegmentsTermPositions
+name|MultiTermPositions
 argument_list|(
 name|readers
 argument_list|,
@@ -905,7 +1018,6 @@ return|;
 block|}
 DECL|method|doClose
 specifier|protected
-specifier|final
 specifier|synchronized
 name|void
 name|doClose
@@ -972,7 +1084,7 @@ name|i
 operator|++
 control|)
 block|{
-name|SegmentReader
+name|IndexReader
 name|reader
 init|=
 name|readers
@@ -1067,7 +1179,7 @@ name|i
 operator|++
 control|)
 block|{
-name|SegmentReader
+name|IndexReader
 name|reader
 init|=
 name|readers
@@ -1101,9 +1213,9 @@ block|}
 end_class
 
 begin_class
-DECL|class|SegmentsTermEnum
+DECL|class|MultiTermEnum
 class|class
-name|SegmentsTermEnum
+name|MultiTermEnum
 extends|extends
 name|TermEnum
 block|{
@@ -1122,10 +1234,11 @@ specifier|private
 name|int
 name|docFreq
 decl_stmt|;
-DECL|method|SegmentsTermEnum
-name|SegmentsTermEnum
+DECL|method|MultiTermEnum
+specifier|public
+name|MultiTermEnum
 parameter_list|(
-name|SegmentReader
+name|IndexReader
 index|[]
 name|readers
 parameter_list|,
@@ -1166,7 +1279,7 @@ name|i
 operator|++
 control|)
 block|{
-name|SegmentReader
+name|IndexReader
 name|reader
 init|=
 name|readers
@@ -1278,7 +1391,6 @@ block|}
 block|}
 DECL|method|next
 specifier|public
-specifier|final
 name|boolean
 name|next
 parameter_list|()
@@ -1393,7 +1505,6 @@ return|;
 block|}
 DECL|method|term
 specifier|public
-specifier|final
 name|Term
 name|term
 parameter_list|()
@@ -1404,7 +1515,6 @@ return|;
 block|}
 DECL|method|docFreq
 specifier|public
-specifier|final
 name|int
 name|docFreq
 parameter_list|()
@@ -1415,7 +1525,6 @@ return|;
 block|}
 DECL|method|close
 specifier|public
-specifier|final
 name|void
 name|close
 parameter_list|()
@@ -1432,15 +1541,15 @@ block|}
 end_class
 
 begin_class
-DECL|class|SegmentsTermDocs
+DECL|class|MultiTermDocs
 class|class
-name|SegmentsTermDocs
+name|MultiTermDocs
 implements|implements
 name|TermDocs
 block|{
 DECL|field|readers
 specifier|protected
-name|SegmentReader
+name|IndexReader
 index|[]
 name|readers
 decl_stmt|;
@@ -1481,10 +1590,11 @@ name|SegmentTermDocs
 name|current
 decl_stmt|;
 comment|// == segTermDocs[pointer]
-DECL|method|SegmentsTermDocs
-name|SegmentsTermDocs
+DECL|method|MultiTermDocs
+specifier|public
+name|MultiTermDocs
 parameter_list|(
-name|SegmentReader
+name|IndexReader
 index|[]
 name|r
 parameter_list|,
@@ -1514,7 +1624,6 @@ expr_stmt|;
 block|}
 DECL|method|doc
 specifier|public
-specifier|final
 name|int
 name|doc
 parameter_list|()
@@ -1529,7 +1638,6 @@ return|;
 block|}
 DECL|method|freq
 specifier|public
-specifier|final
 name|int
 name|freq
 parameter_list|()
@@ -1542,7 +1650,6 @@ return|;
 block|}
 DECL|method|seek
 specifier|public
-specifier|final
 name|void
 name|seek
 parameter_list|(
@@ -1597,7 +1704,6 @@ expr_stmt|;
 block|}
 DECL|method|next
 specifier|public
-specifier|final
 name|boolean
 name|next
 parameter_list|()
@@ -1658,7 +1764,6 @@ block|}
 comment|/** Optimized implementation. */
 DECL|method|read
 specifier|public
-specifier|final
 name|int
 name|read
 parameter_list|(
@@ -1883,7 +1988,7 @@ specifier|protected
 name|SegmentTermDocs
 name|termDocs
 parameter_list|(
-name|SegmentReader
+name|IndexReader
 name|reader
 parameter_list|)
 throws|throws
@@ -1901,7 +2006,6 @@ return|;
 block|}
 DECL|method|close
 specifier|public
-specifier|final
 name|void
 name|close
 parameter_list|()
@@ -1948,18 +2052,19 @@ block|}
 end_class
 
 begin_class
-DECL|class|SegmentsTermPositions
+DECL|class|MultiTermPositions
 class|class
-name|SegmentsTermPositions
+name|MultiTermPositions
 extends|extends
-name|SegmentsTermDocs
+name|MultiTermDocs
 implements|implements
 name|TermPositions
 block|{
-DECL|method|SegmentsTermPositions
-name|SegmentsTermPositions
+DECL|method|MultiTermPositions
+specifier|public
+name|MultiTermPositions
 parameter_list|(
-name|SegmentReader
+name|IndexReader
 index|[]
 name|r
 parameter_list|,
@@ -1978,11 +2083,10 @@ expr_stmt|;
 block|}
 DECL|method|termDocs
 specifier|protected
-specifier|final
 name|SegmentTermDocs
 name|termDocs
 parameter_list|(
-name|SegmentReader
+name|IndexReader
 name|reader
 parameter_list|)
 throws|throws
@@ -2000,7 +2104,6 @@ return|;
 block|}
 DECL|method|nextPosition
 specifier|public
-specifier|final
 name|int
 name|nextPosition
 parameter_list|()
